# ie-garage

./: .gitignore  Cargo.toml  LICENSE  README.md
public/: auth.js  autofill-rule.html  autofill.html  car.html  cars.html  chat.js  database.html  fuel-detect.js  index.html  job.html  jobs.html  overlay.js  part.html  parts.html  save-feedback.js  settings-backup.html  settings-branding.html  settings-chat.html  settings-hours.html  settings-print.html  settings-scanner.html  settings-screensaver.html  settings-voice.html  settings.html  stocktake.html  store-division.html  store-divisions.html  store-item.html  store.html  worker.html  workers.html
src/: main.rs
