[package]
name = "rust_oil_server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.7", features = ["multipart"] }
reqwest = { version = "0.12", features = ["json", "cookies", "gzip", "brotli", "deflate"] }
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "fs", "set-header"] }
urlencoding = "2"
base64 = "0.22"
image = "0.25"
